# ffmpegDigitizer

./: .gitignore  CMakeLists.txt  Digitizer.cpp  Doxyfile  Makefile  README.md  testFill.m
cmake/: FindFFMPEG.cmake
digitizerFrame/: DigitizerFrame.cpp  DigitizerFrame.h
guiImplementation/: DigitizerFrame.cpp  DigitizerFrame.h  LeftButtonDown.cpp  LeftButtonUp.cpp  OnAbout.cpp  OnQuit.cpp  OpenFile.cpp  ScrollVideo.cpp
imagePanel/: ImagePanel.cpp  ImagePanel.cpp~  ImagePanel.h  ImagePanel.h~
markerSelector/: MarkerCoordinates.h  MarkerSelector.cpp  MarkerSelector.h
src/: CMakeLists.txt  Digitizer.cpp
src/digitizerFrame/: DigitizerFrame.cpp  DigitizerFrame.h
src/imagePanel/: ImagePanel.cpp  ImagePanel.h
src/markerSelector/: CoordinateFlowTracker.h  CoordinateTracker.h  MarkerCoordinates.h  MarkerSelector.cpp  MarkerSelector.h
src/trackingThread/: TrackingThread.cpp  TrackingThread.h
src/videoReader/: VideoReader.cpp  VideoReader.h  videoWriter.h
testing/: sampleThread.cpp  threadTest.cpp
trackingThread/: TrackingThread.cpp  TrackingThread.h
video/: videoReader.h  videoWriter.h
videoReader/: VideoReader.cpp  VideoReader.h
